Chỉnh sửa header

--- a/contact.html
+++ b/contact.html
@@ -15,22 +15,12 @@
     <div class="header">
         <div class="header-container">
             <div class="header-container__logo">
-                <a href="#">
+                <a href="/">
                     <img class="logo" src="./src/images/logo.png" alt="logo.alt" width="100%">
                 </a>
             </div>
             <div class="header-container__nav">
                 <div class="header-container__nav-inner">
-                    <div class="start">
-                        <div class="search">
-                            <form action="">
-                                <input type="search" name="q" id="" placeholder="Search" autocomplete="off" />
-                            </form>
-                        </div>
-                        <div class="nav--icon icon">
-                            <i class="fa-solid fa-bars"></i>
-                        </div>
-                    </div>
                     <div class="header-container__nav-menu center">
                         <ul class="main-nav nav">
                             <li>
@@ -39,101 +29,30 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">Cosplay
+                                <a href="./category.html">Cosplay
                                     <div class="underline"></div>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">Hentai 2d
+                                <a href="./category.html">Image 2d
                                     <div class="underline"></div>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">Hentai 3d
+                                <a href="./category.html">Image 3d
                                     <div class="underline"></div>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">See more
+                                <a href="./category.html">See more
                                     <div class="underline"></div>
                                 </a>
                             </li>
                         </ul>
-                        <div class="center__search search">
-                            <form action="">
-                                <input type="search" name="q" id="" placeholder="Search" autocomplete="off">
-                            </form>
-                            <i class="fa-solid fa-magnifying-glass a"></i>
-                            <i class="fa-solid fa-xmark icon b close--btn"></i>
-                        </div>
+
                     </div>
-                    <div class="end">
-                        <div class="search--icon icon">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </div>
-                        <div class="user">
-                            <div class="avt">
-                                <i class="fa-solid fa-circle-user"></i>
-                                <!-- <div class="avt-img">
-                                    <img src="./src/images/favicon.png" alt="" width="100%">
-                                </div> -->
-                                <div class="info" style="display:none">
-                                    <div class="name">
-                                        <span>Quang Trọng</span>
-                                        <span class="office">Admin</span>
-                                    </div>
-                                    <div class="edit-profile">
-                                        <a href="#">Edit profile</a>
-                                    </div>
-                                    <div class="favorite">
-                                        <a href="#">Favorite</a>
-                                    </div>
-                                    <div class="favorite">
-                                        <a href="#">Album</a>
-                                    </div>
-                                    <div class="logout">
-                                        <a href="#">Logout</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
-            </div>
-        </div>
-        <div class="nav-bar">
-            <div class="nav-bar__header">
-                <div class="close--icon">
-                    <i class="fa-solid fa-xmark"></i>
-                </div>
-                <div class="search">
-                    <form action="">
-                        <input type="search" name="q" id="" placeholder="Search" autocomplete="off" />
-                    </form>
-                </div>
-            </div>
-            <ul class="nav">
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="#">Cosplay</a>
-                </li>
-                <li>
-                    <a href="#">Hentai 2d</a>
-                </li>
-                <li>
-                    <a href="#">Hentai 3d</a>
-                </li>
-                <li>
-                    <a href="#other">See more
-                    </a>
-                </li>
-            </ul>
-            <div class="logo">
-                <a href="/">
-                    <img src="./src/images/logo.png" alt="" width="100%">
-                </a>
             </div>
         </div>
     </div>
