--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">Hentai 2d
+                                <a href="./category.html">Image 2d
                                     <div class="underline"></div>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">Hentai 3d
+                                <a href="./category.html">Image 3d
                                     <div class="underline"></div>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">See more
+                                <a href="./category.html">See more
                                     <div class="underline"></div>
                                 </a>
                             </li>
