Chỉnh sửa header

--- a/category.html
+++ b/category.html
@@ -15,7 +15,7 @@
     <div class="header">
         <div class="header-container">
             <div class="header-container__logo">
-                <a href="/">
+                <a href="./index.html">
                     <img class="logo" src="./src/images/logo.png" alt="logo.alt" width="100%">
                 </a>
             </div>
@@ -24,7 +24,7 @@
                     <div class="header-container__nav-menu center">
                         <ul class="main-nav nav">
                             <li>
-                                <a href="/">Home
+                                <a href="./index.html">Home
                                     <div class="underline"></div>
                                 </a>
                             </li>
